@@ -4687,3 +4687,6 @@ Changelog for GXemul:
 		More work on the other-than-4KB bug fix.
 20180618	Doubling DEFAULT_DYNTRANS_CACHE_SIZE from 48 to 96 MB.
 		Updating more NetBSD install instructions to 7.1.2.
+20180619	When reading disk sectors from the 'disk' device (for e.g.
+		testmips), automatically move to the next sector after
+		reading (or writing).
